--- a/TStree/TStree.html
+++ b/TStree/TStree.html
@@ -8,12 +8,12 @@
 	<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-	<div id="container" style="width: 1600px;height:700px;"></div>
+	<div class="input-group" style="position:absolute;left:0;left:0;width: 320px;height:100%;display:flex;justify-content:center;">
+        <textarea  style="float:left;position:absolute;left:10px;top:10px;height:500px;width: 300px;" class="form-control" placeholder="请输入师生信息..." id="inputs"></textarea>
+		<span class="input-group-btn " style="position: absolute;left:auto;top:515px"><button class="btn btn-primary" onclick="Build_Tree()">确定</button></span>
+	</div>
+	<div id="container" style="position:absolute;top:0px;left:320px;width: 1200px;height: 100%"></div>
 </body>
-	<div class="input-group" style="width: 100%;height:100%;display:flex;justify-content:center;">
-        <textarea  style="height:300px;width: 500px;" class="form-control" placeholder="请输入师生信息..." id="inputs"></textarea>
-    </div>
-    <span class="input-group-btn "><button class="btn btn-primary" onclick="Build_Tree()">确定</button></span>
 	<script type="text/javascript">
 	</script>
 </html>
